add some reload commands, translations, a command manager, a new packet, more safety for existing packets | make analyze performance command require access level 1

--- a/common/src/main/resources/assets/jamesconfig/lang/en_us.json
+++ b/common/src/main/resources/assets/jamesconfig/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-  "config.analyze.success": "Saved config analysis to %s, took %s"
+  "config.analyze.success": "Saved config analysis to %s, took %s",
+  "config.reload.remote.success": "Reloaded Remote Config \"%s\" Successfully, took %s",
+  "config.reload.local.success": "Reloaded Local Config \"%s\" Successfully, took %s",
+  "config.invalid_location": "§cInvalid Config Name: \"%s§c\""
 }
